test/e2e/app-dir/errors/app/server-component/throw-string/page.js
export const revalidate = 0

export default function Page() {
  // eslint-disable-next-line no-throw-literal -- testing bad values on purpose
  throw 'this is a test'
}
